[package]
name = "ch1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0.74"
serde_yaml = "0.9.10"
chrono = "0.4.19"
tokio = { version = "1.15.0", features = ["full"] }
tokio-util = { version = "0.7.1", features = ["codec"] }
futures-util = { version = "*", features = ["sink"] }
itertools = "0.10.5"
tracing = "0.1.29"
time = { version = "0.3", features = ["macros"] }
clia-local-time = "0.2"
tracing-subscriber = "0.3.3"
reqwest = { version = "0.11.11", features = ["json"] }
# ring = "0.16.20"
# hex = "0.4.3"
# local-ip-address = "0.4.4"
# iprange = "0.6.7"
# ipnet = "2.3.1"
# lettre = "0.9"
# lettre_email = "0.9"
serde_urlencoded = "0.7"
serde_url_params = "0.2.1"

bytes = "1.2.1"
anyhow = "1.0.64"