[package]
name = "crab_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = [
    "rt",
    "rt-multi-thread",
    "sync",
    "macros",
    "fs",
    "time"
] }
once_cell = "1.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "socks"] }
bytes = "1.4"
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["time", "env-filter"] }
time = { version = "0.3", features = ["macros"] }
clap = { version = "4.3", features = ["derive", "env"] }
scraper = "0.17"
dotenvy = { version = "0.15", default-features = false }
url = "2.4"
number_range = "0.3"