[package]
name = "gdbm_trest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# gnudbm = "=0.2.3"
gnudbm = { path = "./gnudbm" }
gdbm = { path = "./gdbm" }
gdbm_my = { path = "./gdbm_my" }
serde = { version = "1.0.132", features = ["derive"] }
serde_json = "1.0.73"
nix = "0.23.1"
tokio = { version = "1.15.0", features = ["full"] }
