[package]
name = "signal_handle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
signal-hook = { version = "0.3.14", features = ["iterator"] }
signal-hook-tokio = { version = "0.3.1", features = ["futures-v0_3"] }
futures = "0.3.24"
tokio = { version = "1.21.0", features = ["macros", "rt", "rt-multi-thread"] }
