[package]
name = "tokio_codec_sink"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.133", features = ["derive"] }
# serde_json = "1.0.74"
serde_yaml = "0.8.23"
chrono = "0.4.19"
tokio = { version = "1.15.0", features = ["full"] }
tokio-util = { version = "0.7.1", features = ["codec"] }
futures-util = {version = "*", features = ["sink"]}

