[package]
name = "gnudbm"
version = "0.0.1"
authors = ["Colin Rofls <colin@cmyr.net>"]
description = "Ergonomic bindings for gdbm"
categories = ["database", "external-ffi-bindings"]
repository = "https://github.com/cmyr/gnudbm.git"
license = "MIT"

[features]
system-gdbm = []

[dependencies]
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"