[package]
name = "tonic_grpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.11.0"
tokio = { version = "1.21.0", features = ["macros", "rt-multi-thread"] }
tonic = "0.8.1"

[build-dependencies]
tonic-build = "0.8.0"

[[bin]] # 用来运行 HelloWorld gRPC 服务器的可执行文件
name = "server"
path = "src/server.rs"

[[bin]] # 用来运行 HelloWorld gRPC 客户端的可执行文件
name = "client"
path = "src/client.rs"
